<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BlinkBlinkBeach</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_underline"><u>Sign In</u></string>
    <string name="signing_in">Signing in…</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_underline"><u>Sign Up</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="blink_blink_beach_logo">Blink Blink Beach logo</string>
    <string name="password_reset">Password Reset</string>
    <string name="please_enter_your_email_we_will_send_you_an_email_so_you_can_reset_your_password">Please enter your email. We will send you an email so you can reset your password..</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="send_me_the_email">Send me the email</string>
    <string name="polluted_beach_image_provided_by_reporter">polluted beach image provided by reporter</string>
    <string name="details_with_comma">Details:</string>
    <string name="details">Details</string>
    <string name="register">Register</string>
    <string name="registered">Registered</string>
    <string name="a_map_showing_the_location_of_the_event">A map showing the location of the event</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="be_a_part_of_defending_our_planet">Be A Part of\nDefending Our\nPlanet</string>
    <string name="events">Events</string>
    <string name="view_all"><u>View All</u></string>
    <string name="picture_for_the_event">Picture for the event</string>
    <string name="date_with_comma">Date: %1$s</string>
    <string name="participant_joined">%1$d Participants joined</string>
    <string name="location_with_comma">Location: %1$s</string>
    <string name="time_with_comma">Time: %1$s</string>
    <string name="events_njoined">Events\njoined</string>
    <string name="number">%1$d</string>
    <string name="edit_icon">edit icon</string>
    <string name="edit_with_underline"><u>Edit</u></string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_username_icon">Edit username icon</string>
    <string name="submit_report">Submit Report</string>
    <string name="track_my_report_with_underline"><u>Track My Report</u></string>
    <string name="email">Email</string>
    <string name="update_username">Update Username</string>
    <string name="please_enter_a_new_username">Please enter a new username.</string>
    <string name="update">Update</string>
    <string name="are_you_sure_you_want_to_join_this_event">Are you sure you want to join this event?</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="blink_blink_beach">Blink Blink Beach</string>
    <string name="events_held">Events Held</string>
    <string name="coming_events">Coming Events</string>
    <string name="please_tell_us_nwhich_beach_nis_not_blink_blink">Please tell us\nwhich beach\nis not blink-blink.</string>
    <string name="user_s_name">User\'s Name</string>
    <string name="write_your_report_here">Write your report here</string>
    <string name="add_your_evidence">Add your evidence</string>
    <string name="add_location">Add location</string>
    <string name="submit">Submit</string>
    <string name="total_participation">Total Participation</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="go_to_submit_report_page">Go to submit report page</string>
    <string name="select_image_from_camera">select image from camera</string>
    <string name="select_image_from_gallery">select image from gallery</string>
    <string name="pick_location">pick location</string>
    <string name="share_event_icon">share event icon</string>
    <string name="rejected">Rejected</string>
</resources>