<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
            android:id="@+id/dialog_cancel_button"
            android:contentDescription="@string/cancel"
            app:icon="@drawable/ic_clear_icon"
            app:iconSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="35dp"
            android:paddingVertical="20dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/password_reset"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_regular"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:layout_marginBottom="20dp"
                android:text="@string/please_enter_your_email_we_will_send_you_an_email_so_you_can_reset_your_password" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="20dp"
                android:hint="@string/email_address">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_email_edit_text"
                    android:fontFamily="@font/quicksand_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/dialog_send_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:paddingHorizontal="20dp"
                android:fontFamily="@font/bitter_regular"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:text="@string/send_me_the_email" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>