<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signIn.SignInFragment">

    <androidx.cardview.widget.CardView
            android:id="@+id/sign_in_progress_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            android:elevation="10dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/sign_in_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:indeterminateBehavior="cycle"
                android:indeterminate="true"
                android:visibility="visible" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:layout_marginBottom="20dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bbb_logo_green_text"
                android:contentDescription="@string/blink_blink_beach_logo" />

        <TextView
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bitter"
                android:textStyle="bold"
                android:text="@string/sign_in"
                android:textSize="30sp" />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="15dp"
                android:hint="@string/email_address">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_in_email_edit_text"
                    android:fontFamily="@font/quicksand_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="15dp"
                android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_in_password_edit_text"
                    android:fontFamily="@font/quicksand_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/forget_password_button"
                android:padding="5dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true" />

        <Button
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:fontFamily="@font/bitter_regular"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_button" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            <TextView
                    android:id="@+id/does_not_have_an_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doesn_t_have_an_account" />

            <TextView
                    android:id="@+id/navigate_to_sign_up_button"
                    android:paddingHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_with_underline"
                    android:layout_toEndOf="@id/does_not_have_an_account_text"
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>