<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment"
        android:padding="50dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/bbb_logo_green"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/md_theme_light_secondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.cardview.widget.CardView
                        android:id="@+id/edit_profile_image_button"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:cardCornerRadius="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                            android:contentDescription="@string/edit_icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:src="@drawable/ic_edit_icon" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:id="@+id/number_of_joined_event_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="27"
                        android:fontFamily="@font/quicksand_regular"
                        android:textSize="40sp"
                        android:textColor="@color/md_theme_light_primary" />

                <TextView
                        android:layout_below="@+id/number_of_joined_event_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events_njoined"
                        android:fontFamily="@font/quicksand_regular"
                        android:textSize="24sp" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/username_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/username"
                    android:fontFamily="@font/bitter"
                    android:layout_alignParentStart="true" />

            <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/edit_username_button"
                    android:contentDescription="@string/edit_username_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_edit_icon"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/username_title" />

        </RelativeLayout>

        <TextView
                android:id="@+id/username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="John Doe"
                android:fontFamily="@font/quicksand_regular"
                android:layout_marginBottom="25dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/email"
                android:fontFamily="@font/bitter" />

        <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="Loremipsum@hotmail.com"
                android:fontFamily="@font/quicksand_regular"
                android:layout_marginBottom="25dp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_report"
                android:fontFamily="@font/bitter_regular"
                android:layout_marginBottom="15dp" />

        <TextView
                android:id="@+id/track_my_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_my_report_with_underline"
                android:clickable="true"
                android:focusable="true"
                android:padding="15dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>